<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="14dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alata"
                    android:text="@string/name_label"
                    android:textColor="#6750A3"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/nameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_edit_hint_label"
                    android:minHeight="48dp"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alata"
                    android:text="@string/mobile_label"
                    android:textColor="#6750A3"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/mobileNumberEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_edit_hint_label"
                    android:minHeight="48dp"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alata"
                    android:text="@string/group_size_label"
                    android:textColor="#6750A3"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/groupSizeEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_edit_hint_label"
                    android:minHeight="48dp"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alata"
                    android:text="@string/date_label"
                    android:textColor="#6750A3"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <DatePicker
                    android:id="@+id/datePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:datePickerMode="spinner"
                    android:startYear="2023"
                    android:calendarViewShown="false"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alata"
                    android:text="@string/time_label"
                    android:textColor="#6750A3"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TimePicker
                    android:id="@+id/timePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:timePickerMode="spinner"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alata"
                android:text="@string/area_label"
                android:textColor="#6750A3"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/smokingGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checkedButton="@id/smokingRadio"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/smokingRadio"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:text="@string/smoking_label" />

                <RadioButton
                    android:id="@+id/nonSmokingRadio"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:text="@string/non_smoking_label" />
            </RadioGroup>

            <CheckBox
                android:id="@+id/confirmCheckbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_label"
                android:fontFamily="@font/alata"
                android:textColor="#6750A3"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center" >

                <Button
                    android:id="@+id/reserveButton"
                    android:layout_width="250dp"
                    android:layout_height="55dp"
                    android:text="@string/reserve_label"
                    android:textAllCaps="true" />

                <Button
                    android:id="@+id/resetButton"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="250dp"
                    android:layout_height="55dp"
                    android:text="@string/reset_label"
                    android:textAllCaps="true"
                    android:textColor="#6750A3"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>